# helping_hand

./: .gitignore  README.md  dependencies.rosinstall
helping_hand/: CMakeLists.txt  package.xml
helping_hand_database/: package.xml  setup.py
helping_hand_database/src/helping_hand_database/: database_tf_publisher.py
helping_hand_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml
helping_hand_gui/conf/: triggers_conf.yml
helping_hand_gui/launch/: gui.launch  reconcycle.launch
helping_hand_gui/qt/: helpinghand.ui  helpinghand.ui.autosave
helping_hand_gui/src/: gui_code.py
helping_hand_nodes/: CMakeLists.txt  README.md  package.xml  setup.py
helping_hand_nodes/launch/: db_republisher.launch  republishers.launch
helping_hand_nodes/scripts/: mongo_tf_republisher  num2bool_republisher
helping_hand_nodes/src/helping_hand_nodes/: database_tf_publisher.py  num_to_bool_republisher.py
helping_hand_services/: CMakeLists.txt  README.md  package.xml  setup.py
helping_hand_services/launch/: helping_hand_services.launch
helping_hand_services/script/: helping_hand_services
helping_hand_services/src/helping_hand_services/: configuration_capture.py  database_pusher.py
