<package>
  <name>reconcell</name>
  <version>0.0.1</version>
  <description>
    The Helping Hand package aims at facilitating kinesthetic teaching of robot trajectories, poses and actions by providing services and comperhensive GUIs.</description>
  <author email="timotej.gaspar@ijs.si">Timotej Gaspar</author>
  <maintainer email="timotej.gaspar@ijs.si">Timotej Gašpar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
