<?xml version="1.0"?>
<package format="2">
  <name>helping_hand_nodes</name>
  <version>0.1.0</version>
  <description>Helping Hand Nodes provide various usefull tools.</description>

  <maintainer email="timotej.gaspar@ijs.si">Timotej Gaspar</maintainer>

  <license>BSD</license>

  <author email="timotej.gaspar@gmail.com">Timotej Gaspar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>mongodb_store</depend>
  <!-- <test_depend>python-unittest2</test_depend> -->
  <!-- <test_depend>rostest</test_depend> -->

  <export>
  </export>
</package>
